--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,4 @@ jobs:
             name: getting-started-github
             location: 'west europe'
             ports: '3000'
+            volumes: gettingstartedfiles:/app/wwwroot/containeropslag
